# yio

./: .clang-tidy  .cmake-format.py  .exrc  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTION.md  CPPLINT.cfg  CTestConfig.cmake  Dashboard_chors.cmake  Makefile  README.md  alpine_builder.Dockerfile  archlinux_builder.Dockerfile  cppcheck.cfg  dashboard.cmake  dashboard_chors.cmake
examples/: CMakeLists.txt  yio_example_1.c  yio_example_2.c  yio_example_4.c  yio_example_custom_type_callback.c
src/: CMakeLists.txt  README.md  config.m4.in  configuration.cmake  cpack.cmake  environment_checks.cmake  geterrors.py  library.jinja  preprocess.py  version.cmake  yc16io.h  yio.c  yio.h  yioConfig.cmake.in  yio_config.m4.in  yio_config_gen.cmake  yio_print.c  yioopt.c  ystdio.c  yuio.h  ywio.h
src/m4/: yio_config.m4.in
src/yio/: README.md  intprops.h  yc16io.h  ydebug.h  yio.c  yio.h  yio_common.h  yio_config.h  yio_config.h.in  yio_ctx.c  yio_ctx.h  yio_error.c  yio_error.h  yio_error.jinja  yio_error_messages.cmake  yio_ex.h  yio_fmt.c  yio_fmt.h  yio_macros.h  yio_macros_gen.h  yio_macros_gen_priv.h  yio_macros_priv.h  yio_print_arguments.h  yio_print_arguments_gnu.h  yio_print_arguments_nongnu.h  yio_private.c  yio_private.h  yio_public.h  yio_scan_int.c  yio_scan_modifiers.c  yio_static_assert.h  yio_version.c  yio_version.h.in  yuio.h  ywio.h  ywio.h.m4_
src/yio/bits/: yio_buf.h  yio_decimal.c  yio_decimal.h  yio_float.c  yio_float.h  yio_float_strfrom_printf.c  yio_float_strfrom_printf.h  yio_float_strfrom_strfrom.c  yio_float_strfrom_strfrom.h  yio_float_strfrom_stupid.c  yio_float_strfrom_stupid.h  yio_float_string.c  yio_float_string.h  yio_stdfix.h  yio_vec.h
src/yio/compatlib/: README.md  yio_floatlib.c
src/yio/decimallib/: yio_decimallib.c  yio_decimallib.h
src/yio/manip/: yio_print_chars.c  yio_print_float.c  yio_print_int.c  yio_print_modifiers.c  yio_scan_string.c
src/yio/private/: private.h  yio_allochelp.c  yio_allochelp.h  yio_buf.h  yio_cache_auto.h  yio_decimal.c  yio_decimal.h  yio_float.c  yio_float.h  yio_float_decimal.c  yio_float_float.c  yio_float_strfrom_custom.c  yio_float_strfrom_custom.c.in  yio_float_strfrom_custom.h  yio_float_strfrom_printf.c  yio_float_strfrom_printf.h  yio_float_strfrom_ryu.c  yio_float_strfrom_ryu.h  yio_float_strfrom_strfrom.c  yio_float_strfrom_strfrom.c.in  yio_float_strfrom_strfrom.h  yio_float_strfrom_stupid.c  yio_float_strfrom_stupid.h  yio_res.c  yio_res.h  yio_stdfix.h  yio_stdfix_strfrom.c  yio_stdfix_strfrom.h  yio_strconv.c  yio_strconv.h  yio_strlib.c  yio_strlib.h  yio_strnlen.c  yio_strnlen.h  yio_time.c  yio_time.h  yio_vec.h
src/yio/stupiddfp/: yio_stupiddfp.c  yio_stupiddfp.h
src/yio/template/: README.md  commonctx.c  commonctx.h  commonctx_private.h  ctx.c  ctx.h  ctx_private.h  fmt.c  fmt.h  fmt_private.h  io.c  io.h  io_fd.c  io_file.c  io_vb.c  private.h  public.h  yio_macros.h  yio_macros_gnu.h  yio_macros_nongnu.h  yio_print_arguments_gnu.h  yio_print_arguments_nongnu.h  yio_template.cmake  yio_template_replace.cmake
test/: CMakeLists.txt  _yIO_print_time_in_extract_format_add_space.c  conversion.c  no_private.c  nognu.c  test.cmake  test_additional.c  test_bits_buf.c  test_from_cpp_formatter.c  test_from_fmt_format.c  test_monetary.c  test_positional.c  test_very_long_time.c  test_width.c  test_zero_inf_nan.c  version.c  yio_test_custom_callback_1.c  yio_test_custom_callback_2.c  yio_test_custom_callback_pointer.c  yio_test_static_is_string_literal.c  yio_test_static_strlen.c  yio_test_strerror.c  yio_testcmp_1.c  ywio_wchars.c
test/01_examples/: yio_example_1.c  yio_example_3.c  yio_example_4.c  yio_example_6.c  yio_test_custom_type_callback.c  yio_test_custom_type_slot.c
test/ZZ_tester_input/: CMakeLists.txt  tester_input.c
test/cmake/: CMakeLists.txt  test.cmake
test/cmake_example/: CMakeLists.txt  Makefile
test/correct_function_is_chosen/: CMakeLists.txt  correct_function_is_chosen.c
test/cpp/: CMakeLists.txt  yio_test_macros.pp
test/error/: CMakeLists.txt  count_err.c
test/examples/: yio_example_1.c  yio_example_2.c  yio_example_3.c  yio_example_4.c  yio_example_5.c  yio_example_6.c  yio_test_custom_type_callback.c  yio_test_custom_type_slot.c
test/failmallocchecker/: CMakeLists.txt  README.md  failmalloccheckertest.c  mallocfailtest.c  test_yio_res.c
test/float/: test_float_strfrom.c  test_float_strfrom.m4.c  yio_float_group_comma.c  yio_float_group_under.c  yio_floattest_1.c  yio_floattest_2.c  yio_floattest_3.c  yio_test_extended_floats.c  yio_test_float_negative.c
test/int/: all_int_types.c  yio_int_group_comma.c  yio_inttests_1.c  yio_inttests_2.c
test/m4/: CMakeLists.txt  test_forloopdash.m4  test_seqcomma.m4  test_seqdashcomma.m4  testit.m4  yio_config.m4
test/macros/: CMakeLists.txt
test/no_size_param/: CMakeLists.txt  no_argsizes.c  no_argsizespnt.c
test/parse/: args.c  test_ysprintf.c  yio_parse_invalid.c  yio_test_cfmt_parse.c  yio_test_pfmt_parse.c
test/pp/: CMakeLists.txt
test/redirectstdin/: CMakeLists.txt  Makefile  main.c
test/reprocessed/: CMakeLists.txt  test_float_strfrom.c
test/scan/: yio_test_scan_01.c  yio_test_scan_02.c  yio_test_scan_03.c  yio_test_scan_04.c  yio_test_scan_05.c  yio_test_scan_06.c  yio_test_scan_07.c  yio_test_scan_08.c  yio_test_scan_09.c
test/simple/: print_time_in_extract_format_add_space.c  test_vla.c  yio_test_01.c  yio_test_02.c  yio_test_03.c  yio_test_04.c  yio_test_05.c  yio_test_06.c  yio_test_07.c  yio_test_08.c
test/stdfix/: test_stdfix_3.c
test/templated/: CMakeLists.txt  README.md  yio_test_custom_callback_1.c  yio_test_custom_callback_2.c  yio_test_custom_callback_pointer.c
test/time/: print_time_in_extract_format_add_space.c
test/wscan/: ywio_test_scan_01.c  ywio_test_scan_02.c  ywio_test_scan_03.c  ywio_test_scan_04.c
test/wsimple/: ywio_test_01.c  ywio_test_02.c  ywio_test_03.c  ywio_test_04.c  ywio_test_05.c  ywio_test_06.c
test/yio_testlib/: CMakeLists.txt  README.md  yio_test.c  yio_test.h  yio_test_float.h  yio_test_private.h  yπio.h
(+292 files in other folders)
